# zephyrdb

./: .gitignore  ANALYSIS_REPORT.md  CMakeLists.txt  Kconfig  Kconfig.zephyrdb  README.md  TESTING.md  module.yml  west.yml  zephyrdb.c  zephyrdb.h  zephyrdb_core.c  zephyrdb_doc.c  zephyrdb_eventing_zbus.c  zephyrdb_eventing_zbus.h  zephyrdb_internal.h  zephyrdb_kv.c  zephyrdb_shell.c  zephyrdb_ts.c
.github/workflows/: test.yml
docs/: README.md  api.md  architecture.md  configuration.md  roadmap.md  samples.md  testing.md
examples/: first_pass_init_example.c
samples/: README.md
samples/core_health_stats/: CMakeLists.txt  README.md  prj.conf
samples/core_health_stats/src/: main.c
samples/doc_basic/: CMakeLists.txt  README.md  prj_nrf52840dk.conf  prj_sdcard.conf
samples/doc_basic/src/: main.c
samples/doc_query_filters/: CMakeLists.txt  README.md  prj.conf
samples/doc_query_filters/src/: main.c
samples/eventing_zbus/: CMakeLists.txt  README.md  prj.conf
samples/eventing_zbus/src/: main.c
samples/kv_basic/: CMakeLists.txt  README.md  prj.conf  prj_nrf52840dk.conf  prj_zms.conf
samples/kv_basic/src/: main.c
samples/native_sim_harness/: CMakeLists.txt  prj.conf
samples/native_sim_harness/src/: main.c
samples/shell_basic/: CMakeLists.txt  prj.conf  sample.yaml
samples/shell_basic/src/: main.c
samples/ts_basic/: CMakeLists.txt  README.md  prj.conf  prj_fcb.conf  prj_nrf52840dk.conf  prj_nrf52840dk_sdcard.conf  prj_sdcard.conf
samples/ts_basic/src/: main.c
tests/: CMakeLists.txt  README.md  twister.yaml
tests/fixtures/: backends_mock.c  common.h
tests/hardware/: persistence_nrf52840dk_test.c
tests/integration/: workflows_test.c
tests/integration/workflows_app/: CMakeLists.txt  testcase.yaml
tests/integration/workflows_app/src/: main.c
tests/integration_smoke/: CMakeLists.txt  prj.conf  testcase.yaml
tests/integration_smoke/src/: main.c
tests/samples/: verify_samples_test.c
tests/samples/verify_app/: CMakeLists.txt  testcase.yaml
tests/samples/verify_app/src/: main.c
tests/samples_smoke/: CMakeLists.txt  testcase.yaml
tests/samples_smoke/src/: main.c
tests/unit/: doc_basic_test.c  kv_basic_test.c  ts_basic_test.c
tests/unit/doc_basic_app/: CMakeLists.txt  prj.conf  testcase.yaml
tests/unit/doc_basic_app/src/: main.c
tests/unit/kv_basic_app/: CMakeLists.txt  testcase.yaml
tests/unit/kv_basic_app/src/: main.c
tests/unit/ts_basic_app/: CMakeLists.txt  testcase.yaml
tests/unit/ts_basic_app/src/: main.c
tests/unit_kv_events/: CMakeLists.txt  testcase.yaml
tests/unit_kv_events/src/: main.c
tests/unit_kv_hydrate/: CMakeLists.txt  testcase.yaml
tests/unit_kv_hydrate/src/: main.c
tests/unit_kv_smoke/: CMakeLists.txt  testcase.yaml
tests/unit_kv_smoke/src/: main.c
tests/unit_smoke/: CMakeLists.txt  testcase.yaml
tests/unit_smoke/src/: main.c
tests/unit_ts_smoke/: CMakeLists.txt  testcase.yaml
tests/unit_ts_smoke/src/: main.c
zephyr/: CMakeLists.txt  Kconfig  module.yml
